#[[
This source file is part of the Swift Collections Open Source Project

Copyright (c) 2022 Apple Inc. and the Swift project authors
Licensed under Apache License v2.0 with Runtime Library Exception

See https://swift.org/LICENSE.txt for license information
#]]

add_library(HashTreeCollections
  "Node/_AncestorSlots.swift"
  "Node/_Bitmap.swift"
  "Node/_Bucket.swift"
  "Node/_Hash.swift"
  "Node/_HashTreeIterator.swift"
  "Node/_HashTreeStatistics.swift"
  "Node/_Level.swift"
  "Node/_Node+Builder.swift"
  "Node/_Node+Debugging.swift"
  "Node/_Node+Initializers.swift"
  "Node/_Node+Invariants.swift"
  "Node/_Node+Lookups.swift"
  "Node/_Node+Primitive Insertions.swift"
  "Node/_Node+Primitive Removals.swift"
  "Node/_Node+Primitive Replacement.swift"
  "Node/_Node+Storage.swift"
  "Node/_Node+Structural compactMapValues.swift"
  "Node/_Node+Structural filter.swift"
  "Node/_Node+Structural intersection.swift"
  "Node/_Node+Structural isDisjoint.swift"
  "Node/_Node+Structural isEqualSet.swift"
  "Node/_Node+Structural isSubset.swift"
  "Node/_Node+Structural mapValues.swift"
  "Node/_Node+Structural merge.swift"
  "Node/_Node+Structural subtracting.swift"
  "Node/_Node+Structural symmetricDifference.swift"
  "Node/_Node+Structural union.swift"
  "Node/_Node+Subtree Insertions.swift"
  "Node/_Node+Subtree Modify.swift"
  "Node/_Node+Subtree Removals.swift"
  "Node/_Node+UnsafeHandle.swift"
  "Node/_Node.swift"
  "Node/_RawNode+UnsafeHandle.swift"
  "Node/_RawNode.swift"
  "Node/_Slot.swift"
  "Node/_Stack.swift"
  "Node/_StorageHeader.swift"
  "Node/_UnmanagedNode.swift"
  "Node/_UnsafePath.swift"
  "TreeDictionary/TreeDictionary+Codable.swift"
  "TreeDictionary/TreeDictionary+Collection.swift"
  "TreeDictionary/TreeDictionary+CustomReflectable.swift"
  "TreeDictionary/TreeDictionary+Debugging.swift"
  "TreeDictionary/TreeDictionary+Descriptions.swift"
  "TreeDictionary/TreeDictionary+Equatable.swift"
  "TreeDictionary/TreeDictionary+ExpressibleByDictionaryLiteral.swift"
  "TreeDictionary/TreeDictionary+Filter.swift"
  "TreeDictionary/TreeDictionary+Hashable.swift"
  "TreeDictionary/TreeDictionary+Initializers.swift"
  "TreeDictionary/TreeDictionary+Keys.swift"
  "TreeDictionary/TreeDictionary+MapValues.swift"
  "TreeDictionary/TreeDictionary+Merge.swift"
  "TreeDictionary/TreeDictionary+Sendable.swift"
  "TreeDictionary/TreeDictionary+Sequence.swift"
  "TreeDictionary/TreeDictionary+Values.swift"
  "TreeDictionary/TreeDictionary.swift"
  "TreeSet/TreeSet+Codable.swift"
  "TreeSet/TreeSet+Collection.swift"
  "TreeSet/TreeSet+CustomReflectable.swift"
  "TreeSet/TreeSet+Debugging.swift"
  "TreeSet/TreeSet+Descriptions.swift"
  "TreeSet/TreeSet+Equatable.swift"
  "TreeSet/TreeSet+ExpressibleByArrayLiteral.swift"
  "TreeSet/TreeSet+Extras.swift"
  "TreeSet/TreeSet+Filter.swift"
  "TreeSet/TreeSet+Hashable.swift"
  "TreeSet/TreeSet+Sendable.swift"
  "TreeSet/TreeSet+Sequence.swift"
  "TreeSet/TreeSet+SetAlgebra Initializers.swift"
  "TreeSet/TreeSet+SetAlgebra basics.swift"
  "TreeSet/TreeSet+SetAlgebra formIntersection.swift"
  "TreeSet/TreeSet+SetAlgebra formSymmetricDifference.swift"
  "TreeSet/TreeSet+SetAlgebra formUnion.swift"
  "TreeSet/TreeSet+SetAlgebra intersection.swift"
  "TreeSet/TreeSet+SetAlgebra isDisjoint.swift"
  "TreeSet/TreeSet+SetAlgebra isEqualSet.swift"
  "TreeSet/TreeSet+SetAlgebra isStrictSubset.swift"
  "TreeSet/TreeSet+SetAlgebra isStrictSuperset.swift"
  "TreeSet/TreeSet+SetAlgebra isSubset.swift"
  "TreeSet/TreeSet+SetAlgebra isSuperset.swift"
  "TreeSet/TreeSet+SetAlgebra subtract.swift"
  "TreeSet/TreeSet+SetAlgebra subtracting.swift"
  "TreeSet/TreeSet+SetAlgebra symmetricDifference.swift"
  "TreeSet/TreeSet+SetAlgebra union.swift"
  "TreeSet/TreeSet.swift"
  )
target_link_libraries(HashTreeCollections PRIVATE
  _CollectionsUtilities)
set_target_properties(HashTreeCollections PROPERTIES
  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})

_install_target(HashTreeCollections)
set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS HashTreeCollections)
