#[[
This source file is part of the Swift Collections Open Source Project

Copyright (c) 2022 Apple Inc. and the Swift project authors
Licensed under Apache License v2.0 with Runtime Library Exception

See https://swift.org/LICENSE.txt for license information
#]]

add_library(PersistentCollections
  "Node/_AncestorSlots.swift"
  "Node/_Bitmap.swift"
  "Node/_Bucket.swift"
  "Node/_Hash.swift"
  "Node/_HashTreeIterator.swift"
  "Node/_HashTreeStatistics.swift"
  "Node/_Level.swift"
  "Node/_Node+Builder.swift"
  "Node/_Node+Debugging.swift"
  "Node/_Node+Initializers.swift"
  "Node/_Node+Invariants.swift"
  "Node/_Node+Lookups.swift"
  "Node/_Node+Primitive Insertions.swift"
  "Node/_Node+Primitive Removals.swift"
  "Node/_Node+Primitive Replacement.swift"
  "Node/_Node+Storage.swift"
  "Node/_Node+Structural compactMapValues.swift"
  "Node/_Node+Structural filter.swift"
  "Node/_Node+Structural intersection.swift"
  "Node/_Node+Structural isDisjoint.swift"
  "Node/_Node+Structural isEqual.swift"
  "Node/_Node+Structural isSubset.swift"
  "Node/_Node+Structural mapValues.swift"
  "Node/_Node+Structural merge.swift"
  "Node/_Node+Structural subtracting.swift"
  "Node/_Node+Structural symmetricDifference.swift"
  "Node/_Node+Structural union.swift"
  "Node/_Node+Subtree Insertions.swift"
  "Node/_Node+Subtree Modify.swift"
  "Node/_Node+Subtree Removals.swift"
  "Node/_Node+UnsafeHandle.swift"
  "Node/_Node.swift"
  "Node/_RawNode+UnsafeHandle.swift"
  "Node/_RawNode.swift"
  "Node/_Slot.swift"
  "Node/_Stack.swift"
  "Node/_StorageHeader.swift"
  "Node/_UnmanagedNode.swift"
  "Node/_UnsafePath.swift"
  "PersistentDictionary/PersistentDictionary+Codable.swift"
  "PersistentDictionary/PersistentDictionary+Collection.swift"
  "PersistentDictionary/PersistentDictionary+CustomReflectable.swift"
  "PersistentDictionary/PersistentDictionary+Debugging.swift"
  "PersistentDictionary/PersistentDictionary+Descriptions.swift"
  "PersistentDictionary/PersistentDictionary+Equatable.swift"
  "PersistentDictionary/PersistentDictionary+ExpressibleByDictionaryLiteral.swift"
  "PersistentDictionary/PersistentDictionary+Filter.swift"
  "PersistentDictionary/PersistentDictionary+Hashable.swift"
  "PersistentDictionary/PersistentDictionary+Initializers.swift"
  "PersistentDictionary/PersistentDictionary+Keys.swift"
  "PersistentDictionary/PersistentDictionary+MapValues.swift"
  "PersistentDictionary/PersistentDictionary+Merge.swift"
  "PersistentDictionary/PersistentDictionary+Sendable.swift"
  "PersistentDictionary/PersistentDictionary+Sequence.swift"
  "PersistentDictionary/PersistentDictionary+Values.swift"
  "PersistentDictionary/PersistentDictionary.swift"
  "PersistentSet/PersistentSet+Codable.swift"
  "PersistentSet/PersistentSet+Collection.swift"
  "PersistentSet/PersistentSet+CustomReflectable.swift"
  "PersistentSet/PersistentSet+Debugging.swift"
  "PersistentSet/PersistentSet+Descriptions.swift"
  "PersistentSet/PersistentSet+Equatable.swift"
  "PersistentSet/PersistentSet+ExpressibleByArrayLiteral.swift"
  "PersistentSet/PersistentSet+Extras.swift"
  "PersistentSet/PersistentSet+Filter.swift"
  "PersistentSet/PersistentSet+Hashable.swift"
  "PersistentSet/PersistentSet+Sendable.swift"
  "PersistentSet/PersistentSet+Sequence.swift"
  "PersistentSet/PersistentSet+SetAlgebra Initializers.swift"
  "PersistentSet/PersistentSet+SetAlgebra basics.swift"
  "PersistentSet/PersistentSet+SetAlgebra fluent basics.swift"
  "PersistentSet/PersistentSet+SetAlgebra formIntersection.swift"
  "PersistentSet/PersistentSet+SetAlgebra formSymmetricDifference.swift"
  "PersistentSet/PersistentSet+SetAlgebra formUnion.swift"
  "PersistentSet/PersistentSet+SetAlgebra intersection.swift"
  "PersistentSet/PersistentSet+SetAlgebra isDisjoint.swift"
  "PersistentSet/PersistentSet+SetAlgebra isEqual.swift"
  "PersistentSet/PersistentSet+SetAlgebra isStrictSubset.swift"
  "PersistentSet/PersistentSet+SetAlgebra isStrictSuperset.swift"
  "PersistentSet/PersistentSet+SetAlgebra isSubset.swift"
  "PersistentSet/PersistentSet+SetAlgebra isSuperset.swift"
  "PersistentSet/PersistentSet+SetAlgebra subtract.swift"
  "PersistentSet/PersistentSet+SetAlgebra subtracting.swift"
  "PersistentSet/PersistentSet+SetAlgebra symmetricDifference.swift"
  "PersistentSet/PersistentSet+SetAlgebra union.swift"
  "PersistentSet/PersistentSet.swift"
  )
target_link_libraries(PersistentCollections PRIVATE
  _CollectionsUtilities)
set_target_properties(PersistentCollections PROPERTIES
  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})

_install_target(PersistentCollections)
set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS PersistentCollections)
