#[[
This source file is part of the Swift Collections Open Source Project

Copyright (c) 2022 Apple Inc. and the Swift project authors
Licensed under Apache License v2.0 with Runtime Library Exception

See https://swift.org/LICENSE.txt for license information
#]]

add_library(ShareableHashedCollections
  "Node/_AncestorSlots.swift"
  "Node/_Bitmap.swift"
  "Node/_Bucket.swift"
  "Node/_Hash.swift"
  "Node/_HashTreeIterator.swift"
  "Node/_HashTreeStatistics.swift"
  "Node/_Level.swift"
  "Node/_Node+Builder.swift"
  "Node/_Node+Debugging.swift"
  "Node/_Node+Initializers.swift"
  "Node/_Node+Invariants.swift"
  "Node/_Node+Lookups.swift"
  "Node/_Node+Primitive Insertions.swift"
  "Node/_Node+Primitive Removals.swift"
  "Node/_Node+Primitive Replacement.swift"
  "Node/_Node+Storage.swift"
  "Node/_Node+Structural compactMapValues.swift"
  "Node/_Node+Structural filter.swift"
  "Node/_Node+Structural intersection.swift"
  "Node/_Node+Structural isDisjoint.swift"
  "Node/_Node+Structural isEqualSet.swift"
  "Node/_Node+Structural isSubset.swift"
  "Node/_Node+Structural mapValues.swift"
  "Node/_Node+Structural merge.swift"
  "Node/_Node+Structural subtracting.swift"
  "Node/_Node+Structural symmetricDifference.swift"
  "Node/_Node+Structural union.swift"
  "Node/_Node+Subtree Insertions.swift"
  "Node/_Node+Subtree Modify.swift"
  "Node/_Node+Subtree Removals.swift"
  "Node/_Node+UnsafeHandle.swift"
  "Node/_Node.swift"
  "Node/_RawNode+UnsafeHandle.swift"
  "Node/_RawNode.swift"
  "Node/_Slot.swift"
  "Node/_Stack.swift"
  "Node/_StorageHeader.swift"
  "Node/_UnmanagedNode.swift"
  "Node/_UnsafePath.swift"
  "ShareableDictionary/ShareableDictionary+Codable.swift"
  "ShareableDictionary/ShareableDictionary+Collection.swift"
  "ShareableDictionary/ShareableDictionary+CustomReflectable.swift"
  "ShareableDictionary/ShareableDictionary+Debugging.swift"
  "ShareableDictionary/ShareableDictionary+Descriptions.swift"
  "ShareableDictionary/ShareableDictionary+Equatable.swift"
  "ShareableDictionary/ShareableDictionary+ExpressibleByDictionaryLiteral.swift"
  "ShareableDictionary/ShareableDictionary+Filter.swift"
  "ShareableDictionary/ShareableDictionary+Hashable.swift"
  "ShareableDictionary/ShareableDictionary+Initializers.swift"
  "ShareableDictionary/ShareableDictionary+Keys.swift"
  "ShareableDictionary/ShareableDictionary+MapValues.swift"
  "ShareableDictionary/ShareableDictionary+Merge.swift"
  "ShareableDictionary/ShareableDictionary+Sendable.swift"
  "ShareableDictionary/ShareableDictionary+Sequence.swift"
  "ShareableDictionary/ShareableDictionary+Values.swift"
  "ShareableDictionary/ShareableDictionary.swift"
  "ShareableSet/ShareableSet+Codable.swift"
  "ShareableSet/ShareableSet+Collection.swift"
  "ShareableSet/ShareableSet+CustomReflectable.swift"
  "ShareableSet/ShareableSet+Debugging.swift"
  "ShareableSet/ShareableSet+Descriptions.swift"
  "ShareableSet/ShareableSet+Equatable.swift"
  "ShareableSet/ShareableSet+ExpressibleByArrayLiteral.swift"
  "ShareableSet/ShareableSet+Extras.swift"
  "ShareableSet/ShareableSet+Filter.swift"
  "ShareableSet/ShareableSet+Hashable.swift"
  "ShareableSet/ShareableSet+Sendable.swift"
  "ShareableSet/ShareableSet+Sequence.swift"
  "ShareableSet/ShareableSet+SetAlgebra Initializers.swift"
  "ShareableSet/ShareableSet+SetAlgebra basics.swift"
  "ShareableSet/ShareableSet+SetAlgebra formIntersection.swift"
  "ShareableSet/ShareableSet+SetAlgebra formSymmetricDifference.swift"
  "ShareableSet/ShareableSet+SetAlgebra formUnion.swift"
  "ShareableSet/ShareableSet+SetAlgebra intersection.swift"
  "ShareableSet/ShareableSet+SetAlgebra isDisjoint.swift"
  "ShareableSet/ShareableSet+SetAlgebra isEqualSet.swift"
  "ShareableSet/ShareableSet+SetAlgebra isStrictSubset.swift"
  "ShareableSet/ShareableSet+SetAlgebra isStrictSuperset.swift"
  "ShareableSet/ShareableSet+SetAlgebra isSubset.swift"
  "ShareableSet/ShareableSet+SetAlgebra isSuperset.swift"
  "ShareableSet/ShareableSet+SetAlgebra subtract.swift"
  "ShareableSet/ShareableSet+SetAlgebra subtracting.swift"
  "ShareableSet/ShareableSet+SetAlgebra symmetricDifference.swift"
  "ShareableSet/ShareableSet+SetAlgebra union.swift"
  "ShareableSet/ShareableSet.swift"
  )
target_link_libraries(ShareableHashedCollections PRIVATE
  _CollectionsUtilities)
set_target_properties(ShareableHashedCollections PROPERTIES
  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_Swift_MODULE_DIRECTORY})

_install_target(ShareableHashedCollections)
set_property(GLOBAL APPEND PROPERTY SWIFT_COLLECTIONS_EXPORTS ShareableHashedCollections)
